Centered the grip horizontally on scrollbar. Fixed imagecanvas scale for shannon

--- a/SimpleSeer/static/app/styles/app.less
+++ b/SimpleSeer/static/app/styles/app.less
@@ -11,7 +11,7 @@ body {
   }
 
   *::-webkit-scrollbar-thumb {
-    background: #888 url("/img/seer/grippy.png") no-repeat -2px center;
+    background: #888 url("/img/seer/grippy.png") no-repeat center center;
     border: 1px solid #444;
     border-width: 0 0px 0px 1px;
   }
